# emp-zk

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test_all.sh
.github/workflows/: arm.yml  codeql.yml  x86.yml
cmake/: emp-zk-bool-config.cmake
edabit/: edabits.h
emp-vole/: base_svole.h  cope.h  emp-vole.h  lpn.h  mpfss_reg.h  spfss_recver.h  spfss_sender.h  utility.h  vole_triple.h
emp-zk/: emp-zk.h
emp-zk-arith/: conversion.h  emp-zk-arith.h  int_fp.h  ostriple.h  polynomial.h  zk_fp_exec.h  zk_fp_exec_prover.h  zk_fp_exec_verifier.h
emp-zk-bool/: bool_io.h  emp-zk-bool.cpp  emp-zk-bool.h  ostriple.h  polynomial.h  triple_auth.h  zk_bool_circuit_exec.h  zk_prover.h  zk_verifier.h
emp-zk/edabit/: edabits.h
emp-zk/emp-vole/: constants.h  dual_lpn_fp.h  lpn.h  mpfss_reg.h  spfss_recver.h  spfss_sender.h  utility.h  vole_triple.h
emp-zk/emp-vole-f2k/: base_svole.h  emp-vole-f2k.h  lpn_f2k.h  mpfss.h  spfss_f2k_recver.h  spfss_f2k_sender.h  svole.h
emp-zk/emp-zk-arith/: emp-zk-arith.h  int_fp.h  ostriple.h  polynomial.h  triple_auth.h  zk_fp_exec.h  zk_fp_exec_prover.h  zk_fp_exec_verifier.h
emp-zk/emp-zk-bool/: bool_io.h  emp-zk-bool.h  ostriple.h  polynomial.h  triple_auth.h  zk_bool_circuit_exec.h  zk_prover.h  zk_verifier.h
emp-zk/extensions/: floats.h  lowmc.h
emp-zk/extensions/ram-zk/: emp-ram-zk.h  gfmul.h  ostriple.h  poly_prdt.h  ro-zk-mem-ext.h  ro-zk-mem.h  zk-mem-ext.h  zk-mem.h
test/: CMakeLists.txt  bool_io.cpp  circuit_scalability.cpp  example.cpp  inner_prdt.cpp  input_scalability.cpp  lowmc.cpp  memory_scalability.cpp  ostriple.cpp  polynomial.cpp  sha256.cpp
test/arith/: abconversion.cpp  sis.cpp  zk_proof.cpp
test/bool/: bool_io.cpp  circuit_scalability.cpp  example.cpp  inner_prdt.cpp  input_scalability.cpp  lowmc.cpp  memory_scalability.cpp  ostriple.cpp  polynomial.cpp  sha256.cpp
test/ram/: ram_ext_test.cpp  ram_test.cpp  ro_ram_ext_test.cpp  ro_ram_test.cpp
test/test_arith/: abconversion.cpp  circuit_scalability_arith.cpp  inner_prdt.cpp  inner_prdt_arith.cpp  input_scalability.cpp  input_scalability_arith.cpp  matrix_mul.cpp  ostriple_arith.cpp  polynomial.cpp  polynomial_arith.cpp  sis.cpp  zk_proof.cpp
test/test_bool/: bool_io.cpp  circuit_scalability_bool.cpp  inner_prdt_bool.cpp  input_scalability_bool.cpp  lowmc.cpp  memory_scalability.cpp  ostriple_bool.cpp  polynomial_bool.cpp
test/test_vole/: vole_triple.cpp
test/vole/: base_svole.cpp  cope.cpp  dual_lpn_fp.cpp  lpn.cpp  vole_f2k_triple.cpp  vole_triple.cpp
test_arith/: abconversion.cpp  arith_test.cpp  base_svole.cpp  circuit_scala.cpp  circuit_scalability.cpp  cope.cpp  cot.cpp  fail_test.cpp  float_test.cpp  float_test2.cpp  float_test3.cpp  inner_prdt.cpp  input_scala.cpp  input_scalability.cpp  lpn.cpp  matmul_test.cpp  matrix_mul.cpp  mix.cpp  mix2.cpp  mix3.cpp  mix4.cpp  mpfss.cpp  multi.cpp  ostriple.cpp  polynomial.cpp  setup_vole.cpp  sis.cpp  spfss.cpp  vole_triple.cpp  zk_proof.cpp
test_bool/: bool_io.cpp  circuit_scalability.cpp  example.cpp  inner_prdt.cpp  input_scalability.cpp  lowmc.cpp  memory_scalability.cpp  ostriple.cpp  polynomial.cpp  sha256.cpp
test_vole/: base_svole.cpp  lpn.cpp
